// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package db

import (
	"github.com/jackc/pgx/v5/pgtype"
)

type Category struct {
	ID   int32  `json:"id"`
	Name string `json:"name"`
}

type Favorite struct {
	UserID    int64              `json:"user_id"`
	RecipeID  int64              `json:"recipe_id"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
}

type Recipe struct {
	ID              int64       `json:"id"`
	Title           string      `json:"title"`
	Image           pgtype.Text `json:"image"`
	Summary         pgtype.Text `json:"summary"`
	SourceUrl       pgtype.Text `json:"source_url"`
	PrepTimeMinutes pgtype.Int4 `json:"prep_time_minutes"`
	CookTimeMinutes pgtype.Int4 `json:"cook_time_minutes"`
	Serves          pgtype.Int4 `json:"serves"`
	Ingredients     []string    `json:"ingredients"`
	Preparation     []string    `json:"preparation"`
	Tags            []string    `json:"tags"`
}

type RecipeCategory struct {
	RecipeID   int64 `json:"recipe_id"`
	CategoryID int32 `json:"category_id"`
}

type RefreshToken struct {
	ID        int64              `json:"id"`
	UserID    int64              `json:"user_id"`
	TokenHash string             `json:"token_hash"`
	ExpiresAt pgtype.Timestamptz `json:"expires_at"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
	RevokedAt pgtype.Timestamptz `json:"revoked_at"`
}

type User struct {
	ID           int64              `json:"id"`
	Name         string             `json:"name"`
	Email        string             `json:"email"`
	PasswordHash string             `json:"password_hash"`
	CreatedAt    pgtype.Timestamptz `json:"created_at"`
}
